# py-tkinter

./: .gitignore  README-pt_BR.md  README.md  pyproject.toml
src/button/: main.py
src/canvas/: main.py
src/check-button/: main.py
src/combo-box/: main.py
src/data/: br.com.justcode.Tk.desktop  colors.csv
src/dnd/: main.py
src/entry/: main.py
src/label/: main.py
src/listbox/: main.py
src/main-window/: main.py
src/menu/: main.py
src/menu-button/: main.py
src/notebook/: main.py
src/progressbar/: main.py
src/radio-button/: main.py
src/scale/: main.py
src/scrollbar/: main.py
src/separator/: main.py
src/sizegrip/: main.py
src/spinbox/: main.py
src/text/: main.py
src/treeview/: main.py
