[project]
name = "py-tkinter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.11.12",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 79
extend-exclude = [".venv", "docs"]

[tool.ruff.lint]
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
quote-style = "single"

[tool.taskipy.tasks]
format = "ruff check . --select I --fix && ruff format ."
